--- a/tutorial/tutorial.tex
+++ b/tutorial/tutorial.tex
@@ -51,7 +51,7 @@
             for, range, skip, case, esac, init, next, control, function, procedure,
             returns, call, define, type, var, input, output, const, property,
             invariant, synthesis, grammar, requires, ensures, modifies, instance, axiom, 
-            enum, record, integer, boolean, true, false},
+            enum, record, integer, boolean, true, false, group, oracle},
  %otherkeywords={% types
  %   integer, boolean, true, false,
  %   bv1, bv2, bv3, bv4, bv5, bv6, bv7, bv8, bv9, bv10, bv11, bv12, bv13, bv14, bv15, 
@@ -98,10 +98,10 @@
 }
 
 \begin{document}
-\title{Getting Started with {\uclid}\\Alpha release, version 0.9.5}
-\author{Pramod Subramanyan and Sanjit A. Seshia \\
+\title{Getting Started with {\uclid}\\}
+\author{Pramod Subramanyan, Sanjit A. Seshia \footnote{with contributions from Demetris Christodoulou, Kevin Cheang, Federico Mora and Elizabeth Polgreen} \\
         \textit{\{spramod, sseshia\}@eecs.berkeley.edu}}
-\date{June 2018}
+\date{November 2021}
 \maketitle
 
 \tableofcontents
