--- a/tutorial/ch-verification.tex
+++ b/tutorial/ch-verification.tex
@@ -16,7 +16,7 @@ This chapter will describe these features of \uclid{}. Further features are bein
 %---------------------------------------------------------
 \section{Inductive Proofs} % change to \section when we have more sections!
 
-Let us revisit the model from Example~\ref{ex:fib-model}. This is now shown again in Example~\ref{ex:fib-induction}, but with a different proof script. Instead of using the \codelike{unroll} command for bounded model checking, we are using the \codelike{induction} command to attempt an inductive proof.
+Let us revisit the model from Example~\ref{ex:fib-model}. This is now shown again in Example~\ref{ex:fib-induction}, but with a different proof script. Instead of using the \codelike{bmc} command for bounded model checking, we are using the \codelike{induction} command to attempt an inductive proof.
 
 \begin{uclidlisting}[htbp]
     \lstinputlisting[language=uclid,style=uclidstyle]{../examples/tutorial/ex4.1-fib-induction.ucl}
@@ -250,6 +250,16 @@ on embedded (cyber-physical) systems by Lee and Seshia~\cite{leeseshia-16}.
 %\end{uclidlisting}
 
 %---------------------------------------------------------
-\section{Future Directions}
+\section{Synthesis}
 
-Future versions of \uclid{} will have support for synthesizing invariants using Syntax-Guided Synthesis (SyGuS).
+\uclid{} has full support for Syntax-Guided Synthesis across all verification modes. If a synthesis function is inserted into the \uclid model, and the control block contains a verification command as per usual, \uclid{} will construct a synthesis query that searches for a body to any synthesis functions in the model. 
+
+The example in Figure~\ref{fig:fib-induction-synth} uses synthesis to strengthen the invariant for the Fibonacci example we have seen before. When run with the command line option \codelike{-y "cvc4 --lang sygus"} (or another SyGuS solver), \uclid{} will return the correct body for the synthesis function so that the verification condition passes.
+
+\begin{uclidlisting}[htbp]
+    \lstinputlisting[language=uclid,style=uclidstyle]{../examples/tutorial/fib2safety-synth.ucl}
+    \caption{\uclid{} Fibonacci model using \codelike{synthesis function}}
+    \label{ex:fib-induction-synth}
+\end{uclidlisting}
+
+
