--- a/tutorial/ch-basics.tex
+++ b/tutorial/ch-basics.tex
@@ -15,7 +15,7 @@ Types supported by \uclid{} are of the following kinds:
     \item \keyword{boolean}: the Boolean type. This type has two values: \keyword{true} and \keyword{false}.
     \item \keyword{bv\textit{W}}: The family of bit-vector types parameterized by their width ($W$).
     \item \keyword{enum}: enumerated types.
-    \item Float types: Support fp(a)_(b), which is defined as float numbers with an $a$ bit exponent and $b$ bit signficiant and $1$ sign bit. Also, \keyword{half},\keyword{single},\keyword{double} are supported.
+    \item \keyword{fpA\_B}: Float types, which are defined as floating point types with an $A$ bit exponent and $B$ bit signficiant and $1$ sign bit. The standard IEEE float types of \keyword{half}, \keyword{single}, \keyword{double} are also supported.
     \item Tuples and records.
     \item Array types.
     \item Uninterpreted types.
